2006-09-16  Dave Morrison  <drm@finkproject.org>

	* REVISION: remove 10.4-transitional

2006-09-16  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.25.0, a new release

2006-09-16  Dave Morrison  <drm@finkproject.org>

	* fink.8.in, fink.conf.5.in, fink.info.in: fink.sourceforge.net -> www.finkproject.org
	* fink.8.in: mention test suites and InfoTest in --maintainer

2006-09-14  Christian Schaffner  <chris01@users.sourceforge.net>

	* fink-instscripts.in: Fix order of arguments for the updatepod 
	command. This is only used for the AutoDpkg field, which is not being
	used right now. Fixes Bug #1433065

2006-08-14  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* pathsetup.sh.in: POSIX /bin/sh does not support "echo -n"

2006-08-13  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap: remove temporary code which formerly aided users
	in bootstrapping to 10.4-transitional if they wished

2006-07-12  Daniel Macks  <dmacks@netspace.org>

	* bootstrap: Also look for etc/ to indicate fink already installed.

2006-07-12  Daniel Macks  <dmacks@netspace.org>

	* Makefile: Run "bootstrap" itself, don't falsely assume script
	language. Disable implicit foo.sh->foo rules.

2006-07-10  Daniel Macks  <dmacks@netspace.org>

	* fink-dpkg-status-cleanup.in: Implement --dry-run flag.
	* fink.8.in: Document 'cleanup --dpkg-status' mode.

2006-07-07  Daniel Macks  <dmacks@netspace.org>

	* .cvsignore, MANIFEST.SKIP, fink-dpkg-status-cleanup.in,
	install.sh, setup.sh: Pull locking code into fink-dpkg-cleanup
	instead of external -lockwait wrapper script.

2006-06-27  Daniel Macks  <dmacks@netspace.org>

	* fink-dpkg-status-cleanup.in: Template for new utility script to
	remove purged packages from dpkg status file.
	* setup.sh: create fink-dpkg-status-cleanup script from template
	and also a fink-dpkg-status-cleanup-lockwait wrapper for it.
	* install.sh: -cleanup and -cleanup-lockwait go in %p/sbin